--- a/index.html
+++ b/index.html
@@ -4,9 +4,142 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- css file here  -->
+    <link rel="stylesheet" href="style.css">
+    <title>Samsung Galaxy M21 </title>
 </head>
 <body>
-    
+    <div class="container">
+        <!-- nav menu section started here  -->
+        <section>
+            <div class="nav-menu">
+                <a href="#">Home / </a>
+                <a href="">Sumsung Mobile Bangladesh / </a>
+                <span>Samsung Galaxy M21</span>
+            </div>
+        </section>
+       
+        <!-- phone model section started here  -->
+        <section>
+            <div class="phone-model">
+                <h1>Samsung Galaxy M21</h1>
+                <p>
+                    * Some prices may not be up to date according to today's market price. Please always visit your official local store or other official brand channels for exact latest price.
+                </p>
+                <h2>Price In Bangladesh</h2>
+                <table class="price-table">
+                    <thead>
+                        <tr>
+                            <th>Official </th>
+                            <th>৳18,999 <del>৳20,999</del> 6/128 GB</th>
+                        </tr>
+                    </thead>
+                </table>
+                <img src="./phone.jpeg" alt="Samsung Galaxy M21">
+            </div>
+        </section>
+        <!-- Samsung Galaxy M21 Full Specifications section here  -->
+        <section>
+            <div class="phone-specifications">
+                <h2>Samsung Galaxy M21 Full Specifications</h2>
+                <table class="phone-specifications-table">
+                    <tbody>
+                        <tr>
+                            <th>First Release</th>
+                            <td>March 2020</td>
+                        </tr>
+                        <tr>
+                            <th>Colors</th>
+                            <td>Midnight Blue, Raven Black</td>
+                        </tr>
+                        <tr>
+                            <th>Connectivity</th>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <th>Network	</th>
+                            <td>2G, 3G, 4G</td>
+                        </tr>
+                        <tr>
+                            <th>SIM</th>
+                            <td>Dual Nano SIM</td>
+                        </tr>
+                        <tr>
+                            <th>WLAN</th>
+                            <td>✅ dual-band, Wi-Fi direct, Wi-Fi hotspot</td>
+                        </tr>
+                        <tr>
+                            <th>Bluetooth</th>
+                            <td>✅ v5.0, A2DP, LE</td>
+                        </tr>
+                        <tr>
+                            <th>GPS	</th>
+                            <td>✅ A-GPS, GLONASS, BDS</td>
+                        </tr>
+                        <tr>
+                            <th>Radio	</th>
+                            <td>✅ FM, RDS, recording</td>
+                        </tr>
+                        <tr>
+                            <th>USB	</th>
+                            <td>v2.0</td>
+                        </tr>
+                        <tr>
+                            <th>OTG	</th>
+                            <td>✅</td>
+                        </tr>
+                        <tr>
+                            <th>USB </th>
+                            <td>Type-C	✅</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <!-- highlight section started here  -->
+        <hr>
+        <section>
+            <div class="highlight-phone">
+                <h2>Highlights</h2>
+                <p>
+                    Samsung Galaxy M21 comes with 6.4 inches Full HD+ Super AMOLED screen. It has a Full-View waterdrop notch design. The front side is protected by a 3rd generation Gorilla Glass. The back camera is of triple 48+8+5 MP with PDAF, LED flash, depth sensor, ultrawide etc. and UHD 4K video recording. The front camera is of 20 MP. Samsung Galaxy M21 comes with 6000 mAh huge battery with 15W fast charging. It has 4 or 6 GB RAM, 2.3 GHz octa-core CPU and Mali-G72 MP3 GPU. It is powered by Exynos 9611 (10nm) chipset. The device comes with 64 or 128 GB UFS 2.1 internal storage and dedicated MicroSD slot. There is a back-mounted fingerprint sensor in this phone.
+
+
+                </p>
+                <p>Among other features, there is FM Radio, Dual SIM, face unlock, USB Type-C, Android 10 etc.</p>
+
+                <table class="highlighted-table">
+                    <thead>
+                        <tr>
+                            <th>Pros</th>
+                            <th>Cons</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Full HD+ Super AMOLED display</td>
+                            <td>✘ Plastic body with average design</td>
+                        </tr>
+                        <tr>
+                            <td>✔ Gorilla Glass 3 protection</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>✔ Fine camera quality	</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>✔ 6000 mAh massive battery</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>✔ Decent performance</td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>   
+        </section>
+    </div>
 </body>
 </html>
